--- a/index.html
+++ b/index.html
@@ -14,6 +14,7 @@
     
     <script src="models/character.class.js"></script>
     <script src="models/greenAlien.class.js"></script>
+    <script src="models/brainAlien.class.js"></script>
     <script src="models/cloud.class.js"></script>
     <script src="models/status-bar.class.js"></script>
     <script src="models/world.class.js"></script>
