--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
     <title></title>
 
     <link rel="stylesheet" type="text/css" href="style.css">
+    <link rel="stylesheet" type="text/css" href="fonts.css">
 
     <script src="models/drawable-object.class.js"></script>
     <script src="models/movable-object.class.js"></script>
@@ -16,16 +17,20 @@
     <script src="models/greenAlien.class.js"></script>
     <script src="models/brainAlien.class.js"></script>
     
-    <script src="models/cloud.class.js"></script>
     <script src="models/status-bar.class.js"></script>
     <script src="models/boss-status-bar.class.js"></script>
+    <script src="models/collected-grenades.class.js"></script>
+    <script src="models/cloud.class.js"></script>
+    
     <script src="models/world.class.js"></script>
-    <script src="models/background-object.class.js"></script>
     <script src="models/keyboard.class.js"></script>
     <script src="models/level.class.js"></script>
     <script src="models/throwable-object.class.js"></script>
+    <script src="models/grenade-ammunition.class.js"></script>
+    <script src="models/background-object.class.js"></script>
     <script src="models/endboss.class.js"></script>
     <script src="levels/level1.js"></script>
+
     <script src="js/game.js"></script>
 
   </head>
