--- a/index.html
+++ b/index.html
@@ -27,6 +27,8 @@
     <script src="models/level.class.js"></script>
     <script src="models/throwable-object.class.js"></script>
     <script src="models/grenade-ammunition.class.js"></script>
+    <script src="models/pistol-ammunition.class.js"></script>
+    <script src="models/health.class.js"></script>
     <script src="models/background-object.class.js"></script>
     <script src="models/endboss.class.js"></script>
     <script src="levels/level1.js"></script>
