--- a/index.html
+++ b/index.html
@@ -20,12 +20,14 @@
     <script src="models/status-bar.class.js"></script>
     <script src="models/boss-status-bar.class.js"></script>
     <script src="models/collected-grenades.class.js"></script>
+    <script src="models/collected-pistol-ammunition.class.js"></script>
     <script src="models/cloud.class.js"></script>
     
     <script src="models/world.class.js"></script>
     <script src="models/keyboard.class.js"></script>
     <script src="models/level.class.js"></script>
     <script src="models/throwable-object.class.js"></script>
+    <script src="models/shootable-object.class.js"></script>
     <script src="models/grenade-ammunition.class.js"></script>
     <script src="models/pistol-ammunition.class.js"></script>
     <script src="models/health.class.js"></script>
