--- a/index.html
+++ b/index.html
@@ -22,6 +22,7 @@
     <script src="models/collected-grenades.class.js"></script>
     <script src="models/collected-pistol-ammunition.class.js"></script>
     <script src="models/cloud.class.js"></script>
+    <script src="models/ufo.class.js"></script>
     
     <script src="models/world.class.js"></script>
     <script src="models/keyboard.class.js"></script>
