--- a/index.html
+++ b/index.html
@@ -29,6 +29,7 @@
     <script src="models/level.class.js"></script>
     <script src="models/throwable-object.class.js"></script>
     <script src="models/shootable-object.class.js"></script>
+    <script src="models/explosion.class.js"></script>
     <script src="models/grenade-ammunition.class.js"></script>
     <script src="models/pistol-ammunition.class.js"></script>
     <script src="models/health.class.js"></script>
