--- a/index.html
+++ b/index.html
@@ -43,7 +43,9 @@
 
   <body onload="init()">
 
+    <h1>Desert Alien Invasion</h1>
     <canvas id="gameCanvas" width="720" height="480"></canvas>
+
     
 
   </body>
