start screen, gameover screen and controls screen created

--- a/index.html
+++ b/index.html
@@ -1,11 +1,17 @@
 <!DOCTYPE html>
-<html lang="de">
-
+<html translate="no">
   <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-
-    <title></title>
+    <meta name="description" content="Defend the world against a ruthless alien invasion! Arm yourself with weapons and fight for survival in this action-packed browser game.">
+    <meta name="keywords" content="Alien Invasion, Shooter, Desert, Browser Game, Action, Weapons, Survival, Sci-Fi, Combat, Defense">    
+    <meta name="author" content="Marcel Lukas">
+    <link rel="icon" type="image/png" href="img/favicon/favicon-96x96.png" sizes="96x96" />
+    <link rel="icon" type="image/svg+xml" href="img/favicon/favicon.svg" />
+    <link rel="shortcut icon" href="img/favicon/favicon.ico" />
+    <link rel="apple-touch-icon" sizes="180x180" href="img/favicon/apple-touch-icon.png" />
+    <link rel="manifest" href="img/favicon/site.webmanifest" />
+    <title>Desert Alien Invasion</title>
 
     <link rel="stylesheet" type="text/css" href="style.css">
     <link rel="stylesheet" type="text/css" href="fonts.css">
@@ -43,10 +49,92 @@
 
   <body onload="init()">
 
+
+    <div id="start-overlay" class="d-none">
+        <img id="start-screen" src="img/start-screen.jpg" alt="Start Screen">
+
+        <div id="start-btn" onclick="startGame()">Start</div>
+
+        <div class="controls-info-btn" onclick="toggleControlInfo()">
+            <span>Game Controls</span>
+            <img src="img/keyboard.png" alt="Keyboard">
+        </div>
+
+        <div class="impressum-btn" onclick="toggleImpressum()">
+            Impressum
+        </div>
+    </div>
+
+
     <h1>Desert Alien Invasion</h1>
     <canvas id="gameCanvas" width="720" height="480"></canvas>
 
+
+    <div id="game-over-overlay" class="d-none">
+        <img id="game-over-screen" src="img/end-screen.jpg" alt="Game Over">
+
+        <div id="continue-btn" onclick="restartGame()">Continue</div>
+
+        <div class="controls-info-btn" onclick="toggleControlInfo()">
+            <span>Game Controls</span>
+            <img src="img/keyboard.png" alt="Keyboard">
+        </div>
+
+        <div class="impressum-btn" onclick="toggleImpressum()">
+            Impressum
+        </div>
+    </div>
+
     
+
+    <div id="game-controls-container" class="d-none">
+        <h2>Game Controls</h2>
+        <span>move character</span>
+        <div class="control-info-box">
+            <p>left</p>
+            <div class="keyBox">A</div>
+            <div class="keyBox">D</div>
+            <p>right</p>
+        </div>
+
+        <div class="control-info-box">
+            <p>left</p>
+            <div class="keyBox">←</div>
+            <div class="keyBox">→</div>
+            <p>right</p>
+        </div>
+
+        <span>jump</span>
+
+        <div class="control-info-box">
+            <div class="keyBox">W</div>
+            <p>or</p>
+            <div class="keyBoxSpace">Space</div>
+            <p>or</p>
+            <div class="keyBox">↑</div>
+        </div>
+
+        <div class="control-info-box">
+            <span>grenade</span>
+            <div class="keyBox">R</div>
+            <div class="keyBox">F</div>
+            <span>shoot</span>
+        </div>
+
+        
+    </div>
+
+
+    <div id="impressum-container" class="d-none">
+        <div id="impressum-box">
+            <h2>Impressum</h2>
+            <p>Marcel Lukas</p>
+            <p>Hauptstrasse. 55</p>
+            <p>84152 Mengkofen</p>
+            <p>Mail: <a href="mailto:m.lukas@mailbox.org">m.lukas@mailbox.org</a></p>
+        </div>
+        <a href="https://github.com/Marcel-Lukas" target="_blank" rel="noopener noreferrer"><img id="gitcontact" src="img/github-contact.png" alt="GitHub Kontakt"></a>
+    </div>
 
   </body>
 
