--- a/index.html
+++ b/index.html
@@ -41,6 +41,7 @@
     <script src="models/health.class.js"></script>
     <script src="models/background-object.class.js"></script>
     <script src="models/endboss.class.js"></script>
+    <script src="js/sounds.js"></script>
     <script src="levels/level1.js"></script>
 
     <script src="js/game.js"></script>
@@ -51,6 +52,7 @@
 
 
     <div id="start-overlay" class="d-none">
+        <img class="fullscreen-Icon" onclick="fullscreen()" src="img/fullscreen-icon.png" alt="Fullscreen">
         <img id="start-screen" src="img/start-screen.jpg" alt="Start Screen">
 
         <div id="start-btn" onclick="startGame()">Start</div>
@@ -68,9 +70,11 @@
 
     <h1>Desert Alien Invasion</h1>
     <canvas id="gameCanvas" width="720" height="480"></canvas>
+    <img id="sound-switch" class="sound-switch-icon" onclick="toggleMute()" src="img/sound-icon.png" alt="Sound Switch">
 
 
     <div id="game-over-overlay" class="d-none">
+        <img class="fullscreen-Icon" onclick="fullscreen()" src="img/fullscreen-icon.png" alt="Fullscreen">
         <img id="game-over-screen" src="img/end-screen.jpg" alt="Game Over">
 
         <div id="continue-btn" onclick="restartGame()">Continue</div>
