option implemented to clear all intervals

--- a/index.html
+++ b/index.html
@@ -53,10 +53,9 @@
 
   </head>
 
-  <body onload="init()">
+  <body>
 
-
-    <div id="start-overlay" class="start-overlay d-none">
+    <div id="start-overlay" class="start-overlay">
         <img id="start-screen" class="start-screen" src="img/start-screen.jpg" alt="Start Screen">
         <div id="start-btn" onclick="startGame()">Start</div>
     </div>
