control infoboard embellished

--- a/index.html
+++ b/index.html
@@ -102,7 +102,7 @@
             <p>right</p>
         </div>
 
-        <span>jump</span>
+        <span>to jump</span>
 
         <div class="control-info-box">
             <div class="keyBox">W</div>
@@ -113,7 +113,7 @@
         </div>
 
         <div class="control-info-box">
-            <span>shoot</span>
+            <span class="extra">shoot</span>
             <div class="keyBox">R</div>
             <div class="keyBox">F</div>
             <span>grenade</span>
