--- a/index.html
+++ b/index.html
@@ -72,12 +72,12 @@
 
     <div id="game-over-overlay" class="game-over-overlay d-none">
         <img id="game-over-screen" class="game-over-screen" src="img/end-screen.jpg" alt="Game Over">
-        <div id="continue-btn" onclick="restartGame()">Try Again</div>
+        <div id="continue-btn" onclick="restartGame(), autoFullscreenForMobile()">Try Again</div>
     </div>
 
     <div id="win-overlay" class="win-overlay d-none">
         <img id="win-screen" class="win-screen" src="img/win-screen.jpg" alt="Game Over">
-        <div id="play-again-btn" onclick="restartGame()">Play Again</div>
+        <div id="play-again-btn" onclick="restartGame(), autoFullscreenForMobile()">Play Again</div>
     </div>
 
     <div class="mobile-control-container">
