--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     <meta name="description" content="Defend the world against a ruthless alien invasion! Arm yourself with weapons and fight for survival in this action-packed browser game.">
     <meta name="keywords" content="Alien Invasion, Shooter, Desert, Browser Game, Action, Weapons, Survival, Sci-Fi, Combat, Defense">    
     <meta name="author" content="Marcel Lukas">
-    <meta name="theme-color" content="#333333">
+    <meta name="theme-color" content="#1b1b1b">
     <meta name="apple-mobile-web-app-status-bar-style" content="black">
     <link rel="icon" type="image/png" href="img/favicon/favicon-96x96.png" sizes="96x96">
     <link rel="icon" type="image/svg+xml" href="img/favicon/favicon.svg">
@@ -133,17 +133,13 @@
             <img class="xBtn" onclick="closeWindow()" src="img/close-white.png" alt="X Button">
             <h2>Impressum</h2>
             <p>Marcel Lukas</p>
-            <p>Hauptstrasse. 55</p>
+            <p>Marienhöhe 13</p>
             <p>84152 Mengkofen</p>
-            <p>Mail: <a href="mailto:m.lukas@mailbox.org">m.lukas@mailbox.org</a></p>
+            <br>
+            <a href="https://marcel-lukas.com" target="_blank" rel="noopener noreferrer">www.marcel-lukas.com</a>
         </div>
         <a href="https://github.com/Marcel-Lukas" target="_blank" rel="noopener noreferrer"><img id="gitcontact" src="img/github-contact.png" alt="GitHub Kontakt"></a>
     </div>
-    <script>
-        document.addEventListener('contextmenu', function(event) {
-          event.preventDefault();
-        });
-      </script>
   </body>
 
 </html>
